# pcpp1-assignment

Group 2/: 1_machine_product.py  2_multiple_products.py  3_machine_enhanced.py  app.py  app_2.py  data.py  user.py  user_profile.json
Group 3/: Activity_1.py  Activity_2.py
Group_Aishah/: day1_activity1.py  day1_activity2&3.py  day2_activity.py  day3_activity.py
Trainer/: Activity12_Solution.py  Activity14_Solution.py  Activity1_Solution.py  Activity2_Solution.py  Activity3_AltSolution.py  Activity3_Solution.py  Activity5_AltSolution.py  Activity6_AltSolution.py  Activity6_AltSolution2.py  Activity6_Solution.py  Activity8_Solution.py  AdvLoggingExtended21.py  Config.ini  DBLoggingConfig20.py  DatabaseApp19.py  DatabaseLoad19.py  GridMultiTabLayout.py  InventoryManagerApp16.py  LoggingExtended21.py  MultiTab_Demo.py  SupplierScheduleManagerApp17.py  ThemedApp.py  WeatherAppClient18.py  WeatherAppServer18.py  tkinter_demo.py
pcpp1-car-rental/: pyproject.toml
pcpp1-car-rental/data/: car.csv  car.json  customer.csv  customer.json  staff.csv  staff.json
pcpp1-car-rental/src/pcpp1_car_rental/: __about__.py  __init__.py  car.py  customer.py  logger.py  main.py  staff.py
v5/: Day1_Script1_Demo_1.py  Day1_Script2_Exercise_1.py  Day1_Script3_Demo_2.py  Day1_Script4_Exercise_2.py  Day1_Script5_Demo_3.py  Day2_Script1_Demo_1.py  Day2_Script2_Exercise_1.py  Day2_Script2_Exercise_1_solution.py  Day2_Script3_Demo_2.py  Day2_Script4_Exercise_2.py  Day2_Script5_Demo_3.py  Day3_Script1_Demo_1.py  Day3_Script2_Exercise_1.py  Day3_Script3_Demo_2.py  Day3_Script4_Exercise_2.py  (+7 more)
(+26 files in other folders)
